--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <h2>I'm a Web Developer</h2>
 <!-- TODO 5: Add a link to the project pages -->
 <h3> <a href="./public/movie-ranking.html">Movie Ranking Project</a> </h3>
-<img src="./assets\images/movie-ranking-screenshot.png/" height=200  alt="screenshot of movie ranking project"/>    
+<img src="./assets/images/movie-ranking-screenshot.png/" height=200  alt="screenshot of movie ranking project"/>    
 <br/>
 
 <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a> </h3>
-<img src="./assets\images/birthday-screenshot.png/" height=200 alt="screenshot of birthday invie project" />    
+<img src="./assets/images/birthday-screenshot.png/" height=200 alt="screenshot of birthday invie project" />    
 
 <hr/>
 <!-- TODO 6: Add images to show the project previews
